Add cookie consent banner and cookie policy page

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -9,6 +9,8 @@
     </div>
 }
 
+<partial name="_CookieConsentPartial" />
+
 <div class="govuk-width-container">
     <govuk-phase-banner>
         <govuk-phase-banner-tag>@Model.Phase.ToString()</govuk-phase-banner-tag>
