--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -5,9 +5,11 @@
         <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
                 <h2 class="govuk-visually-hidden">Support links</h2>
-                @{ 
-                    // @await Component.InvokeAsync("FooterLinks")
-                }
+                <ul class="govuk-footer__inline-list">
+                    <li class="govuk-footer__inline-list-item">
+                        @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", null, new { @class = "govuk-footer__link" })
+                    </li>
+                </ul>
                 
                 <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
