--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -20,6 +20,11 @@
 
 <header class="dfe-header" role="banner">
     <div class="dfe-width-container dfe-header__container">
+        <div class="dfe-header__menu">
+            <button type="button" class="dfe-header__menu-toggle" id="menu-toggle" aria-controls="header-navigation" aria-expanded="false">
+                Menu
+            </button>
+        </div>
         <div class="dfe-header__logo">
             <a class="dfe-header__link dfe-header__link--service " href="~/" aria-label="DfE homepage">
                 <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
@@ -29,7 +34,8 @@
         <div class="dfe-header__content" id="content-header">
             <ul class="dfe-header__action-links">
                 @{
-                    if (Context.User.Identity?.IsAuthenticated == true){
+                    if (Context.User.Identity?.IsAuthenticated == true)
+                    {
                         <li>
                             <a asp-controller="Auth" asp-action="SignOut" class="govuk-link govuk-link--inverse">Sign out</a>
                         </li>
