Feat/mobile nav (#26)
* javascript enabled, mobile nav showing but needs refining

* mobile nav showing without javascript, but needs re-styling and positioning, not showing dropdown options yet

* mobile menu button and dropdown rendering

* mobile nav working, button needs positioning

* cleaned up test comments

* added nav scss

* Updated to include navigation CSS in the layout

* Updated run config

* mobile nav rendering and styled, needs one item colouring correctly and menu moving up

* fixed colour issue and menu button positioned

* tweaked buttom positioning

* neatened up scss

* fixed tests

---------

Co-authored-by: EmilyEkins <emilyekins@ES-Ekinss-MacBook-Pro.local>
Co-authored-by: Stuart Foulds-Duncan <stuart.duncan@hippodigital.co.uk>

--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -4,6 +4,8 @@
     var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
 }
 
+
+
 <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
     <div class="dfe-width-container">
         <p class="dfe-header__navigation-title">
@@ -36,3 +38,21 @@
         </ul>
     </div>
 </nav>
+
+<script asp-add-nonce="true">
+    document.addEventListener('DOMContentLoaded', function () {
+        const menuToggle = document.getElementById('menu-toggle');
+        const menuClose = document.getElementById('close-menu');
+        const navigation = document.getElementById('header-navigation');
+
+        menuToggle.addEventListener('click', function () {
+            const isOpen = navigation.classList.toggle('js-show');
+            menuToggle.setAttribute('aria-expanded', isOpen.toString());
+        });
+
+        menuClose.addEventListener('click', function () {
+            navigation.classList.remove('js-show');
+            menuToggle.setAttribute('aria-expanded', 'false');
+        });
+    });
+</script>
