--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -102,12 +102,12 @@
 @if (IsSectionDefined("BeforeGDSContent"))
 {
     <section class="dfe-page-grey">
-        <div class="govuk-width-container">
+        <div class="govuk-width-container" id="main-header-container">
             @await RenderSectionAsync("BeforeGDSContent")
         </div>
     </section>
 }
-<div class="govuk-width-container @ViewBag.ContainerClasses">
+<div class="govuk-width-container @ViewBag.ContainerClasses" id="main-content-container">
     @await RenderSectionAsync("BeforeContent", required: false)
     <main class="govuk-main-wrapper @ViewBag.MainClasses" id="main-content" role="main" lang="@ViewBag.MainLang">
         @RenderBody()
