use service name from config for cookie policy

--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -1,8 +1,13 @@
+@using CareLeavers.Web.Configuration
 @model CareLeavers.Web.Models.ViewModels.CookiePolicyModel
+
+@inject IContentfulConfiguration ContentfulConfiguration
 
 @{
     ViewBag.Title = "Cookies Policy";
     Layout = "_Layout";
+
+    var config = await ContentfulConfiguration.GetConfiguration();
 }
 
 @section BeforeGDSContent
@@ -40,7 +45,7 @@
 </p>
 <h2 class="govuk-heading-l">Essential cookies</h2>
 <p class="govuk-body">
-    Essential cookies keep your information secure while you use Teach in FE. 
+    Essential cookies keep your information secure while you use @config.ServiceName 
     These cookies enable core functionality, such as security, network management, and accessibility. 
     We do not require permission to use essential cookies.
 </p>
