Cookie consent banner and cookie policy (#27)
* Add cookie consent banner and cookie policy page

* Add page title

* Add cookie policy to sitemap

* Code tidy up

* Fix broken tests

* Disable cookie banner on tests and only execute gtag command if defined

* use service name from config for cookie policy

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -1,12 +1,20 @@
+@using CareLeavers.Web.Configuration
+@using Microsoft.Extensions.Options
 @model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
 
 @inject IWebHostEnvironment WebHostEnvironment
+@inject IOptions<ScriptOptions> ScriptOptions
 
 @if (!WebHostEnvironment.IsProduction())
 {
     <div class="environment-banner">
         <div class="govuk-body-s"><strong>ATTENTION!</strong> This is the <strong>@WebHostEnvironment.EnvironmentName</strong> version of @Model.ServiceName website.</div>
     </div>
+}
+
+@if (ScriptOptions.Value.ShowCookieBanner)
+{
+    <partial name="_CookieConsentPartial"/>
 }
 
 <div class="govuk-width-container">
