--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 @using GovUk.Frontend.AspNetCore.TagHelpers
 @using Joonasw.AspNetCore.SecurityHeaders.Csp
 @using Joonasw.AspNetCore.SecurityHeaders.TagHelpers
+@using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.Extensions.Options
 
@@ -14,6 +15,7 @@
 @{
     var config = await ContentfulConfiguration.GetConfiguration();
     var scriptConfig = ScriptOptions.Value;
+    var consentFeature = Context.Features.Get<ITrackingConsentFeature>() ?? throw new NullReferenceException();
 }
 
 <!DOCTYPE html>
@@ -22,6 +24,21 @@
 <head>
     @if (WebHostEnvironment.IsEnvironment("Test") && !string.IsNullOrEmpty(scriptConfig.GTM))
     {
+        <script asp-add-nonce="true">
+            // Define dataLayer and the gtag function.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+        
+            // Set default consent to 'denied' as a placeholder
+            // Determine actual values based on your own requirements
+            gtag('consent', 'default', {
+                'ad_storage': 'denied',
+                'ad_user_data': 'denied',
+                'ad_personalization': 'denied',
+                'analytics_storage': '@(consentFeature.HasConsent ? "granted" : "denied")',
+            });
+        </script>
+        
         <!-- Google Tag Manager -->
         <script asp-add-nonce="true">
             (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
@@ -42,6 +59,10 @@
                 t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
                 y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
             })(window, document, "clarity", "script", "@scriptConfig.Clarity");
+
+            (function () {
+                window.clarity('consent', @(consentFeature.CanTrack.ToString().ToLower()));
+            }());
         </script>
         <!-- End Clarity -->
     }
@@ -81,12 +102,12 @@
 @if (IsSectionDefined("BeforeGDSContent"))
 {
     <section class="dfe-page-grey">
-        <div class="govuk-width-container">
+        <div class="govuk-width-container" id="main-header-container">
             @await RenderSectionAsync("BeforeGDSContent")
         </div>
     </section>
 }
-<div class="govuk-width-container @ViewBag.ContainerClasses">
+<div class="govuk-width-container @ViewBag.ContainerClasses" id="main-content-container">
     @await RenderSectionAsync("BeforeContent", required: false)
     <main class="govuk-main-wrapper @ViewBag.MainClasses" id="main-content" role="main" lang="@ViewBag.MainLang">
         @RenderBody()
