--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -16,7 +16,11 @@
     };
 }
 
-@* add breadcrumbs here, like line 54 *@
+@if (Model.ShowLastUpdated)
+{
+    <hr/>
+    <partial name="Breadcrumbs" model="@Model"/>
+}
 
 @section BeforeGDSContent
 {
