breadcrumbs rendering in the correct place on the page, haven't changed the page.model yet

--- a/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
@@ -36,14 +36,18 @@
         {
             var breadcrumb = breadcrumbs[i];
             <li class="govuk-breadcrumbs__list-item">
-                @if (i == breadcrumbs.Count - 1)
-                {
-                    <span>@breadcrumb.Title</span>
-                }
-                else
-                {
-                    <a href="@breadcrumb.Slug" class="govuk-breadcrumbs__link">@breadcrumb.Title</a>
-                }
+                
+                @* option to make current page non-clickable *@
+
+                @* @if (i == breadcrumbs.Count - 1) *@
+                @* { *@
+                @*     <span>@breadcrumb.Title</span> *@
+                @* } *@
+                @* else *@
+                @* { *@
+                
+                <a href="@breadcrumb.Slug" class="govuk-breadcrumbs__link">@breadcrumb.Title</a>
+
             </li>
         }
     </ol>
