--- a/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
@@ -27,7 +27,7 @@
 
     breadcrumbs.Reverse();
 
-    if (breadcrumbs.Count > 0 && breadcrumbs[0].Slug == "/" || breadcrumbs[0].Slug == "home")
+    if (breadcrumbs.Count > 0 && breadcrumbs[0].Slug == "@homePageSlug")
     {
         breadcrumbs.RemoveAt(0);
     }
