added 'add breadcrumb' as an option on page

--- a/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Breadcrumbs.cshtml
@@ -3,11 +3,17 @@
 @inject IContentfulConfiguration ConfigService
 
 @{
+    if (!Model.ShowBreadcrumb)
+    {
+        return;
+    }
+
+
     var config = await ConfigService.GetConfiguration();
     var homePageSlug = config?.HomePage?.Slug;
-}
 
-@{
+
+
     if (Model?.Slug == homePageSlug)
     {
         return;
