--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -18,6 +18,7 @@
 
 @section BeforeGDSContent
 {
+    <partial name="Breadcrumbs" model="@Model"/>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">
@@ -38,7 +39,6 @@
         {
             <span class="govuk-caption-m">@Model.Type</span>
         }
-        @* ShowCOntentBlock *@
         <gds-contentful-rich-text document="@Model.MainContent"></gds-contentful-rich-text>
         @if (Model.Width == PageWidth.FullWidth)
         {
