Add privacy policies

--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -9,6 +9,9 @@
                     <li class="govuk-footer__inline-list-item">
                         @Html.ActionLink("Cookie Policy", "CookiePolicy", "Pages", null, new { @class = "govuk-footer__link" })
                     </li>
+                    <li class="govuk-footer__inline-list-item">
+                        @Html.ActionLink("Privacy Policies", "PrivacyPolicies", "Pages", null, new { @class = "govuk-footer__link" })
+                    </li>
                 </ul>
                 
                 <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
