--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -124,10 +124,50 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 
 
 @media print {
+  body {
+    width: 100%;
+  }
   .dfe-header,
   .govuk-cookie-banner,
   .govuk-footer__inline-list {
     display: none !important;
+  }
+  .dfe-page-grey {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .govuk-main-wrapper {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .govuk-footer__meta {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .govuk-footer {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .govuk-grid-column-two-thirds {
+    width: 100% !important;
+    max-width: 960px !important;
+    margin: 0 auto !important;
+    padding-left: 10px !important;
+    flex: none !important;
+  }
+
+  .govuk-width-container {
+    max-width: 960px !important;
+    width: 100% !important;
+    padding-left: 10px !important;
+    padding-right: 20px !important;
+    margin: 0 auto !important;
+  }
+
+  .govuk-main-wrapper {
+    width: 100% !important;
+    max-width: 960px !important;
+    margin: 0 auto !important;
   }
 }
 
