Added new types to models (#50)
* Updated to support banner content and remove banner from grids

* Fixed styling for banners and grids

* Re-added the contents headings back in for showing the auto-generated contents blocks, plus added HTML agility pack for HTML parsing

* Added contents block back in, plus larger text modifier into the rich content renderer (for the header)

* Fixed component testing

* Fixed playwright tests and enabled ignoring of SSL errors on local playwright runs

* Removed obsolete H1 as it should never be used

--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -78,7 +78,7 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
 }
 .cat-card-details {
   padding: 30px;
-  min-height: 20px;
+  min-height: 160px;
 }
 
 @media (max-width: 40.0525em) {
@@ -363,9 +363,12 @@ html
 .banner {
   padding-top: 40px;
   padding-bottom: 30px;
-  background-color: #EAF5FF;
   margin-bottom: 30px;
   margin-inline: min(-1*var(--m),var(--w)/2 - 50cqw);
+}
+
+.banner-blue {
+  background-color: #EAF5FF;
 }
 
 .banner > .banner-content {
