Fixing image display

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
@@ -4,7 +4,7 @@
     <div class="box-icon">
         @if (Model.Logo != null)
         {
-            <gds-contentful-image asset="Model.Logo"/>   
+            <contentful-image asset="@Model.Logo"></contentful-image>
         }
     </div>
     <div class="box-content">
