Updated card to show image as presentation only and remove the alt text

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -7,7 +7,7 @@
 <div class="hf-card">
     <a href="@link">
         <div class="hf-card-container">
-            <contentful-image asset="Model.Image" class="full-width-image card-image" title="@Model.Title"/>
+            <img src="@Model.Image.File" alt="" role="presentation" class="full-width-image card-image"/>
             <div class="cat-card-details">
                 <h3 class="govuk-heading-m">@Model.Title</h3>
                 <p class="govuk-body">@Model.Text</p>
