--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -23,7 +23,7 @@
             @if (!string.IsNullOrEmpty(Model.FeedbackText))
             {
                 <span class="govuk-phase-banner__text">
-                This is a new service. Help us improve it and <a class="govuk-link" href="@Model.FeedbackUrl">@Model.FeedbackText</a>.
+                This is a new service. Your <a class="govuk-link" href="@Model.FeedbackUrl">@Model.FeedbackText</a> will help us to improve it.
                 </span>
             }
             else
