--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -1,10 +1,24 @@
+@using CareLeavers.Web.Configuration
+@using CareLeavers.Web.Contentful
+@using Joonasw.AspNetCore.SecurityHeaders.TagHelpers
 @model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
+@inject IContentfulConfiguration ConfigService
+@inject  IContentService ContentService
 
 @{
     var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
+    var currentPage = await ContentService.GetPage(currentLink);
+    
+    var config = await ConfigService.GetConfiguration();
+    var homePageSlug = config?.HomePage?.Slug;
+
+    while (currentPage != null && currentPage.Slug != homePageSlug && currentPage.Parent != null && currentPage.Parent.Slug != homePageSlug)
+    {
+        currentPage = currentPage.Parent;
+    }
+
+   currentLink = currentPage.Slug;
 }
-
-
 
 <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
     <div class="dfe-width-container">
