--- a/src/web/CareLeavers.Web/Views/Shared/ShareThis.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/ShareThis.cshtml
@@ -4,6 +4,7 @@
 {
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
+            <h3 class="govuk-heading-m">Share this page</h3>
             <div class="sharethis-inline-share-buttons"></div>
         </div>
     </div>
