Adding govuk-link classes to hyperlinks

--- a/src/web/CareLeavers.Web/Views/Shared/Banner.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Banner.cshtml
@@ -24,7 +24,7 @@
                         <h3 class="govuk-heading-l">@Model?.Title</h3>
                         <p class="govuk-body">@Model?.Text</p>
                         <p class="govuk-body">
-                            <a href="@link">@Model?.LinkText</a>
+                            <a href="@link" class="govuk-link">@Model?.LinkText</a>
                         </p>
                     </div>
                     <div class="govuk-grid-column-one-half image-column">
