--- a/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
@@ -8,7 +8,7 @@
         }
     </div>
     <div class="box-content">
-        <h3 class="govuk-heading-s"><a href="@Model.Url" target="_blank">@Model.Name</a> <span class="govuk-body-s">(Opens in a new tab)</span></h3>
+        <h3 class="govuk-heading-s"><a href="@Model.Url" target="_blank" class="govuk-link">@Model.Name</a> <span class="govuk-body-s">(Opens in a new tab)</span></h3>
         <p class="govuk-body-s">@Model.Description</p>
         <p class="govuk-body-s"><strong>Call:</strong> @Model.Call</p>
         <p class="govuk-body-s"><strong>Opening times:</strong> @Model.OpeningTimes</p>
