--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 }
 
 <!DOCTYPE html>
-<html class="govuk-template" lang="@CultureInfo.CurrentCulture.TwoLetterISOLanguageName">
+<html class="govuk-template" lang="en">
 
 <head>
     @if (WebHostEnvironment.IsEnvironment("Test") && !string.IsNullOrEmpty(scriptConfig.GTM))
