Updated to ensure print still shows if last updated is not turned on, but sharing is

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -54,7 +54,7 @@
             <partial name="LastUpdated" model="@Model"/>
         }
         
-        <partial name="ShareThis" model="Model.ShowShareThis"/>
+        <partial name="ShareThis" model="Model"/>
     </div>
     @if (Model.Width == PageWidth.TwoThirds)
     {
