--- a/src/web/CareLeavers.Web/Views/Shared/ShareThis.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/ShareThis.cshtml
@@ -1,7 +1,21 @@
-@model bool
+@model CareLeavers.Web.Models.Content.Page
 
-@if (Model)
+@if (Model.ShowShareThis)
 {
+    if (!Model.ShowLastUpdated)
+    {
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"/>
+        <div class="govuk-grid-row">
+            <div class="metadata-logo-wrapper">
+                <div class="govuk-grid-column-two-thirds metadata-column">
+                        <div class="gem-c-print-link govuk-!-display-none-print govuk-!-margin-top-3 govuk-!-margin-bottom-8">
+                            <button class="govuk-link govuk-body-s gem-c-print-link__button" data-module="print-link" id="print-link">Print this page</button>
+                        </div>
+                </div>
+            </div>
+        </div>
+    }
+    
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <h3 class="govuk-heading-m">Share this page</h3>
