Updated to start getting some blocks etc to pull from contentful to avoid massive circular json responses and allow smaller mocking
TODO: Fix mocks

--- a/src/web/CareLeavers.Web/Views/Shared/RichContent/Block.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/RichContent/Block.cshtml
@@ -1,7 +1,14 @@
+@using CareLeavers.Web.Contentful
 @model CareLeavers.Web.Models.Content.RichContentBlock
 
+@inject IContentService ContentService
+
+@{
+    var block = await ContentService.Hydrate(Model);
+}
+
 <div class="govuk-grid-row">
-    @foreach (var content in Model.Entries)
+    @foreach (var content in block.Entries)
     {
         <partial name="RichContent/Content" model="@content"/>
     }
