--- a/src/web/CareLeavers.Web/Views/Shared/Grid.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid.cshtml
@@ -1,17 +1,24 @@
+@using CareLeavers.Web.Contentful
 @using CareLeavers.Web.Models.Content
 @using CareLeavers.Web.Models.Enums
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model CareLeavers.Web.Models.Content.Grid
 
+@inject IContentService ContentService
+
 @{
-    switch (Model.GridType)
+    var grid = await ContentService.Hydrate(Model);
+}
+
+@{
+    switch (grid.GridType)
     {
         case GridType.Cards:
             <section class="dfe-section govuk-!-margin-top-5">
-                @if (Model.Content != null && Model.Content.Any())
+                @if (grid.Content != null && grid.Content.Any())
                 {
                     <div class="dfe-grid-container dfe-grid-container--wider govuk-!-margin-top-5">
-                        @foreach (var content in Model.Content)
+                        @foreach (var content in grid.Content)
                         {
                             var card = (Card)content;
                             <partial model="@card" name="Grid/Card"/>
@@ -23,9 +30,9 @@
 
         case GridType.AlternatingImageAndText:
             <section class="dfe-section alternating-image-text">
-                @if (Model.Content != null && Model.Content.Any())
+                @if (grid.Content != null && grid.Content.Any())
                 {
-                    foreach (var content in Model.Content)
+                    foreach (var content in grid.Content)
                     {
                         var card = (Card)content;
                         <partial model="@card" name="Grid/AlternatingImageAndText"/>
@@ -36,9 +43,9 @@
         
         case GridType.ExternalLinks:
             <section class="dfe-section govuk-!-margin-top-5">
-                @if (Model.Content != null)
+                @if (grid.Content != null)
                 {
-                    @foreach (var content in Model.Content)
+                    @foreach (var content in grid.Content)
                     {
                         var externalAgency = (ExternalAgency)content;
                         <partial model="@externalAgency" name="Grid/ExternalAgency"/>
