--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -6,18 +6,20 @@
 @inject  IContentService ContentService
 
 @{
-    var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
-    var currentPage = await ContentService.GetPage(currentLink);
-    
+    var slugs = await ContentService.GetSiteSlugs();
+    var hierarchy = await ContentService.GetSiteHierarchy();
     var config = await ConfigService.GetConfiguration();
     var homePageSlug = config?.HomePage?.Slug;
 
-    while (currentPage != null && currentPage.Slug != homePageSlug && currentPage.Parent != null && currentPage.Parent.Slug != homePageSlug)
-    {
-        currentPage = currentPage.Parent;
-    }
+    var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
+    var currentPage = currentLink;
 
-   currentLink = currentPage.Slug;
+    while (!string.IsNullOrEmpty(hierarchy.GetValueOrDefault(currentPage)))
+    {
+        currentPage = hierarchy.GetValueOrDefault(currentPage);
+    }
+    
+    
 }
 
 <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
@@ -35,7 +37,7 @@
             @foreach (var link in Model.Navigation)
             {
                 string className = "dfe-header__navigation-item";
-                if (link.Slug == currentLink)
+                if (link.Slug == currentPage)
                 {
                     className += " dfe-header__navigation-item--current";
                 }
