Updated breadcrumbs and navigation to pull from the contentful service

--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -6,20 +6,8 @@
 @inject  IContentService ContentService
 
 @{
-    var slugs = await ContentService.GetSiteSlugs();
-    var hierarchy = await ContentService.GetSiteHierarchy();
-    var config = await ConfigService.GetConfiguration();
-    var homePageSlug = config?.HomePage?.Slug;
-
-    var currentLink = ViewContext.RouteData.Values["slug"]?.ToString();
-    var currentPage = currentLink;
-
-    while (!string.IsNullOrEmpty(hierarchy.GetValueOrDefault(currentPage)))
-    {
-        currentPage = hierarchy.GetValueOrDefault(currentPage);
-    }
-    
-    
+    string currentPage = ViewContext.RouteData.Values["slug"]?.ToString();
+    var breadcrumbs = await ContentService.GetBreadcrumbs(currentPage, false);
 }
 
 <nav class="dfe-header__navigation" id="header-navigation" role="navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
@@ -37,7 +25,7 @@
             @foreach (var link in Model.Navigation)
             {
                 string className = "dfe-header__navigation-item";
-                if (link.Slug == currentPage)
+                if (link.Slug == currentPage || breadcrumbs.Exists(b => b.Slug == link.Slug))
                 {
                     className += " dfe-header__navigation-item--current";
                 }
